discussion/kv_engine/125780/125780_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Use new api for compact

Change-Id: Ie9b1389bdd1809ad539a340e866682b3515c3f00

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-04-15 09:06:00.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-15 09:41:27.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2166/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27505/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\couch-kvstore/couch-kvstore.h(718): error C2039: "CompactRewriteDocInfoCallback": is not a member of "cb::couchstore" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27505/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1693/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:995:25: error: no type named "CompactRewriteDocInfoCallback" in namespace "cb::couchstore" [clang-diagnostic-error]
        cb::couchstore::CompactRewriteDocInfoCallback docinfo_hook) {
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1079:31: error: no member named "compact" in namespace "cb::couchstore" [clang-diagnostic-error]
    errCode = cb::couchstore::compact(
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.h:718:44: error: no type named "CompactRewriteDocInfoCallback" in namespace "cb::couchstore" [clang-diagnostic-error]
                           cb::couchstore::CompactRewriteDocInfoCallback dhook);
                                           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1693/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:995:25:
error: no type named "CompactRewriteDocInfoCallback" in namespace "cb::couchstore" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1693/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23519/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.h:718:44:
error: no type named "CompactRewriteDocInfoCallback" in namespace "cb::couchstore"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23519/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3106/ : FAILURE

Compile error at [2020-04-15T09:08:37.068Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.h:718:28:
error: ?cb::couchstore::CompactRewriteDocInfoCallback? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3106/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3122/ : FAILURE

Compile error at [2020-04-15T09:07:23.246Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.h:718:28:
error: ?cb::couchstore::CompactRewriteDocInfoCallback? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3122/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3176/ : FAILURE

Compile error at [2020-04-15T09:11:26.223Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.h:718:28:
error: ?cb::couchstore::CompactRewriteDocInfoCallback? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3176/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10973/ : FAILURE

Compile error at [2020-04-15T09:11:22.199Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.h:718:28:
error: ?cb::couchstore::CompactRewriteDocInfoCallback? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10973/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/213/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
